force-app/main/default/objects/Universal_App__mdt/fields/isHideFinishButton__c.field-meta.xml
<CustomField>
    <fullName>isHideFinishButton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added to support Display-Only Conditional text on Teacher Checklist page of Teach USA portal.</description>
    <inlineHelpText>If enabled, Form will not be able to submit.
Suitable only for Display Text.</inlineHelpText>
    <label>Hide Finish Button</label>
    <type>Checkbox</type>
</CustomField>