force-app/main/default/objects/Universal_App__mdt/fields/isSaveForLaterEnabled__c.field-meta.xml
<CustomField>
    <fullName>isSaveForLaterEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If true, &quot;Save for Later&quot; button will be available for any Apps that are more than one page.</inlineHelpText>
    <label>Save for Later Enabled</label>
    <type>Checkbox</type>
</CustomField>