force-app/main/default/objects/Universal_App__mdt/fields/ParentAcctField__c.field-meta.xml
<CustomField>
    <fullName>ParentAcctField__c</fullName>
    <inlineHelpText>API Name of lookup field to parent Account</inlineHelpText>
    <label>Parent Acct Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>