force-app/main/default/objects/Universal_App__mdt/fields/ParentOppField__c.field-meta.xml
<CustomField>
    <fullName>ParentOppField__c</fullName>
    <inlineHelpText>API Name of lookup field to parent Opportunity.</inlineHelpText>
    <label>Parent Opp Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>