force-app/main/default/objects/Universal_App__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Custom</label>
</ListView>